*Empty MediaWiki Message*

--- a/Montaldo_Torinese.mw
+++ b/Montaldo_Torinese.mw
@@ -1,6 +1,9 @@
 {{S}}
 '''Montaldo Torinese''' éte 'nu comune [[Italie|tagliáne]] de 589 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
 
 [[de:Montaldo Torinese]]
 [[en:Montaldo Torinese]]
