*Empty MediaWiki Message*

--- a/Montalenghe.mw
+++ b/Montalenghe.mw
@@ -1,6 +1,9 @@
 {{S}}
 '''Montalenghe''' éte 'nu comune [[Italie|tagliáne]] de 889 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
 
 [[de:Montalenghe]]
 [[en:Montalenghe]]
