--- a/Montalto_Dora.mw
+++ b/Montalto_Dora.mw
@@ -1,6 +1,9 @@
 {{S}}
 '''Montalto Dora''' éte 'nu comune [[Italie|tagliáne]] de 3.465 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
 
 [[de:Montalto Dora]]
 [[en:Montalto Dora]]
