--- a/Monteu_da_Po.mw
+++ b/Monteu_da_Po.mw
@@ -1,6 +1,9 @@
 {{S}}
 '''Monteu da Po''' éte 'nu comune [[Italie|tagliáne]] de 828 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
 
 [[de:Monteu da Po]]
 [[en:Monteu da Po]]
