*Empty MediaWiki Message*

--- a/Moriondo_Torinese.mw
+++ b/Moriondo_Torinese.mw
@@ -28,9 +28,9 @@
 |sito =  <!-- http://www.comune.bovezzo.bs.it/ -->
 }}
 
-'''Moriondo Torinese''' ([[lingua piemontese|piemontese]] ''Moriond'') éte 'nu comune [[Italie|tagliáne]] de 763 crestiáne d'a [[Provinge dë Torino|provinge dë Torino]].
+'''Moriondo Torinese''' ([[lingua piemontese|piemontese]] ''Moriond'') éte 'nu comune [[Italie|tagliáne]] de 763 crestiáne d'a [[Provinge de Torino|provinge de Torino]].
 
-==Amministrazione==
+== Amministrazione ==
 {{ComuniAmministrazione
 |NomeSindaco=Giovanni Vergnano
 |DataElezione=14/06/2004
@@ -39,12 +39,13 @@
 |EmailComune=non disponibile
 }}
 
-==Evoluzione demografica==
+== Evoluzione demografiche ==
 
 {{Demografia/Moriondo Torinese}}
 
-[[Category:Comune d'a provinge dë Torino]]
 [[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
 
 [[de:Moriondo Torinese]]
 [[en:Moriondo Torinese]]
