*Empty MediaWiki Message*

--- a/Erasmo_Iacovone.mw
+++ b/Erasmo_Iacovone.mw
@@ -1,1 +1,3 @@
 '''Erasmo Iacovone''' (Capracotta, 22 aprile 1952 – San Giorgio Ionico, 6 febbraio 1978) fu nu jucatur italian, u chiu amat da'o pubblic d'Tarnt, a lassat sta terr a sol 26 anni.
+
+[[Category:Sport]]
