*Empty MediaWiki Message*

--- a/Erasmo_Iacovone.mw
+++ b/Erasmo_Iacovone.mw
@@ -1,3 +1,18 @@
-'''Erasmo Iacovone''' (Capracotta, 22 aprile 1952 – San Giorgio Ionico, 6 febbraio 1978) fu nu jucatur italian, u chiu amat da'o pubblic d'Tarnt, a lassat sta terr a sol 26 anni.
+{{Bio
+|Nome = Erasmo
+|Cognome = Iacovone
+|Sesso = M
+|LuogoNascita = Capracotta
+|GiornoMeseNascita = 22 abrìle
+|AnnoNascita = 1952
+|LuogoMorte = San Giorgio Ionico
+|GiornoMeseMorte = 6 febbrare
+|AnnoMorte = 1978
+|PreAttività=ha state 'nu
+|Attività = sciucatore
+|Nazionalità = tagliàne
+|Categorie=no
+|PostNazionalità=, muèrte angore in attività, a 26 anne, pe 'n'ingidente stradale mendre sciucave jndr'à 'u [[Tarde Sport|Tarde]]
+}}
 
 [[Category:Sport]]
