--- a/Erasmo_Iacovone.mw
+++ b/Erasmo_Iacovone.mw
@@ -1,3 +1,30 @@
+{{S}}
+{{Sportivo
+|nome= Erasmo Iacovone
+|immagine= [[File:Erasmo Iacovone AS Taranto.jpg|180px]]
+|sesso=M
+|nome completo= Erasmo Iacovone
+|GiornoMeseNascita = 22 aprile
+|AnnoNascita = 1952
+|luogo nascita= [[Capracotta]] ([[Provincia di Isernia|IS]])
+|paese nascita= {{ITA}}
+|disciplina = Calcio
+|passaporto=
+|altezza=
+|peso=
+|data morte=  [[6 febbraio]] [[1978]]
+|luogo morte= [[San Giorgio Ionico]] ([[Provincia di Taranto|TA]])
+|Squadra= 
+|ruolo= Attaccante
+|Giovanili anni= 1972
+|Giovanili squadre={{Calcio OMI Roma|G}}
+|Squadre={{Carriera sportivo|1971-72|{{Calcio OMI Roma|G}}|25 (2)|1972-73|{{Calcio Triestina|G}}|13 (0)|1973-74|{{Calcio Carpi|G}}|32 (13)|1974-76|{{Calcio Mantova|G}}|72 (24)|1976-78|{{Calcio Taranto|G}}|37 (17)}}
+|Anni nazionale=
+|nazionale=
+|presenzenazionale(goal)=
+|aggiornato=[[8 aprile]] [[2009]]
+}}
+
 {{Bio
 |Nome = Erasmo
 |Cognome = Iacovone
