correzioni su carriera

--- a/Erasmo_Iacovone.mw
+++ b/Erasmo_Iacovone.mw
@@ -4,16 +4,16 @@
 |immagine= [[File:Erasmo Iacovone AS Taranto.jpg|180px]]
 |sesso=M
 |nome completo= Erasmo Iacovone
-|GiornoMeseNascita = 22 aprile
+|GiornoMeseNascita = 22 abbrìle
 |AnnoNascita = 1952
-|luogo nascita= [[Capracotta]] ([[Provincia di Isernia|IS]])
+|luogo nascita= [[Capracotta]] ([[Provinge de Isernia|IS]])
 |paese nascita= {{ITA}}
 |disciplina = Calcio
 |passaporto=
 |altezza=
 |peso=
-|data morte=  [[6 febbraio]] [[1978]]
-|luogo morte= [[San Giorgio Ionico]] ([[Provincia di Taranto|TA]])
+|data morte=  [[6 febbrare]] [[1978]]
+|luogo morte= [[San Giorgio Ionico]] ([[Provinge de Tarde|TA]])
 |Squadra= 
 |ruolo= Attaccante
 |Giovanili anni= 1972
@@ -22,7 +22,7 @@
 |Anni nazionale=
 |nazionale=
 |presenzenazionale(goal)=
-|aggiornato=[[8 aprile]] [[2009]]
+|aggiornato=[[7 luglie]] [[2009]]
 }}
 
 {{Bio
