--- a/Erasmo_Iacovone.mw
+++ b/Erasmo_Iacovone.mw
@@ -18,7 +18,7 @@
 |ruolo= Attaccande
 |Giovanili anni= 1972
 |Giovanili squadre={{Calcio OMI Rome|G}}
-|Squadre={{Carriera sportivo|1971-72|{{Calcio OMI Rome|G}}|25 (2)|1972-73|{{Calcio Triestina|G}}|13 (0)|1973-74|{{Calcio Carpi|G}}|32 (13)|1974-76|{{Calcio Mantova|G}}|72 (24)|1976-78|{{Calcio Taranto|G}}|37 (17)}}
+|Squadre={{Carriera sportivo|1971-72|{{Calcio OMI Rome|G}}|25 (2)|1972-73|{{Calcio Triestina|G}}|13 (0)|1973-74|{{Calcio Carpi|G}}|32 (13)|1974-76|{{Calcio Mantova|G}}|72 (24)|1976-78|{{Calcio Tarde|G}}|37 (17)}}
 |Anni nazionale=
 |nazionale=
 |presenzenazionale(goal)=
