*Empty MediaWiki Message*

--- a/None.mw
+++ b/None.mw
@@ -1,6 +1,9 @@
 {{S}}
 '''None''' éte 'nu comune [[Italie|tagliáne]] de 7.866 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
 
 [[de:None (Piemont)]]
 [[en:None (TO)]]
