--- a/Novalesa.mw
+++ b/Novalesa.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Novalesa''' éte 'nu comune [[Italie|tagliáne]] de 554 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
