--- a/Osasio.mw
+++ b/Osasio.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Osasio''' éte 'nu comune [[Italie|tagliáne]] de 723 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
