--- a/Oulx.mw
+++ b/Oulx.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Oulx''' éte 'nu comune [[Italie|tagliáne]] de 2.656 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
