--- a/Palazzo_Canavese.mw
+++ b/Palazzo_Canavese.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Palazzo Canavese''' éte 'nu comune [[Italie|tagliáne]] de 782 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
