--- a/Pancalieri.mw
+++ b/Pancalieri.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Pancalieri''' éte 'nu comune [[Italie|tagliáne]] de 1.884 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
