--- a/Parella.mw
+++ b/Parella.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Parella''' éte 'nu comune [[Italie|tagliáne]] de 456 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
