--- a/Pavarolo.mw
+++ b/Pavarolo.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Pavarolo''' éte 'nu comune [[Italie|tagliáne]] de 920 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
