--- a/Pavone_Canavese.mw
+++ b/Pavone_Canavese.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Pavone Canavese''' éte 'nu comune [[Italie|tagliáne]] de 3.781 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
