--- a/Perosa_Canavese.mw
+++ b/Perosa_Canavese.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Perosa Canavese''' éte 'nu comune [[Italie|tagliáne]] de 564 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
