--- a/Perrero.mw
+++ b/Perrero.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Perrero''' éte 'nu comune [[Italie|tagliáne]] de 773 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
