--- a/Pinasca.mw
+++ b/Pinasca.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Pinasca''' éte 'nu comune [[Italie|tagliáne]] de 2.951 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
