--- a/Pinerolo.mw
+++ b/Pinerolo.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Pinerolo''' éte 'nu comune [[Italie|tagliáne]] de 34.264 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
