--- a/Pino_Torinese.mw
+++ b/Pino_Torinese.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Pino Torinese''' éte 'nu comune [[Italie|tagliáne]] de 8.586 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
