*Empty MediaWiki Message*

--- a/Piscina_(TO).mw
+++ b/Piscina_(TO).mw
@@ -1,3 +1,6 @@
 {{S}}
-'''Piscina (TO)''' éte 'nu comune [[Italie|tagliáne]] de 3.146 crestiáne.
-[[Category:Gëografije]]
+'''Piscina''' éte 'nu comune [[Italie|tagliáne]] de 3.146 crestiáne.
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
