--- a/Piverone.mw
+++ b/Piverone.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Piverone''' éte 'nu comune [[Italie|tagliáne]] de 1.261 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
