--- a/Poirino.mw
+++ b/Poirino.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Poirino''' éte 'nu comune [[Italie|tagliáne]] de 9.439 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
