--- a/Pomaretto.mw
+++ b/Pomaretto.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Pomaretto''' éte 'nu comune [[Italie|tagliáne]] de 1.085 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
