--- a/Porte.mw
+++ b/Porte.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Porte''' éte 'nu comune [[Italie|tagliáne]] de 921 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
