--- a/Pragelato.mw
+++ b/Pragelato.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Pragelato''' éte 'nu comune [[Italie|tagliáne]] de 452 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
