--- a/Prali.mw
+++ b/Prali.mw
@@ -1,6 +1,9 @@
 {{S}}
 '''Prali''' éte 'nu comune [[Italie|tagliáne]] de 312 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
 
 [[ca:Prali]]
 [[de:Prali]]
