--- a/Prarostino.mw
+++ b/Prarostino.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Prarostino''' éte 'nu comune [[Italie|tagliáne]] de 1.223 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
