*Empty MediaWiki Message*

--- a/Prascorsano.mw
+++ b/Prascorsano.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Prascorsano''' éte 'nu comune [[Italie|tagliáne]] de 755 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
