*Empty MediaWiki Message*

--- a/Ribordone.mw
+++ b/Ribordone.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Ribordone''' éte 'nu comune [[Italie|tagliáne]] de 84 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
