--- a/Riva_presso_Chieri.mw
+++ b/Riva_presso_Chieri.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Riva presso Chieri''' éte 'nu comune [[Italie|tagliáne]] de 3.831 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
