--- a/Rivalba.mw
+++ b/Rivalba.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Rivalba''' éte 'nu comune [[Italie|tagliáne]] de 966 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
