--- a/Rivalta_di_Torino.mw
+++ b/Rivalta_di_Torino.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Rivalta di Torino''' éte 'nu comune [[Italie|tagliáne]] de 18.266 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
