--- a/Rivoli.mw
+++ b/Rivoli.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Rivoli''' éte 'nu comune [[Italie|tagliáne]] de 51.996 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
