--- a/Robassomero.mw
+++ b/Robassomero.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Robassomero''' éte 'nu comune [[Italie|tagliáne]] de 3.028 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
