--- a/Roletto.mw
+++ b/Roletto.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Roletto''' éte 'nu comune [[Italie|tagliáne]] de 1.987 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
