--- a/Ronco_Canavese.mw
+++ b/Ronco_Canavese.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Ronco Canavese''' éte 'nu comune [[Italie|tagliáne]] de 377 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
