--- a/Rosta.mw
+++ b/Rosta.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Rosta''' éte 'nu comune [[Italie|tagliáne]] de 3.626 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
