*Empty MediaWiki Message*

--- a/Salbertrand.mw
+++ b/Salbertrand.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Salbertrand''' éte 'nu comune [[Italie|tagliáne]] de 461 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
