--- a/Salerano_Canavese.mw
+++ b/Salerano_Canavese.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Salerano Canavese''' éte 'nu comune [[Italie|tagliáne]] de 532 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
