--- a/Salza_di_Pinerolo.mw
+++ b/Salza_di_Pinerolo.mw
@@ -1,6 +1,9 @@
 {{S}}
 '''Salza di Pinerolo''' éte 'nu comune [[Italie|tagliáne]] de 78 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
 
 [[ca:Salza di Pinerolo]]
 [[de:Salza di Pinerolo]]
