*Empty MediaWiki Message*

--- a/Samone_(TO).mw
+++ b/Samone_(TO).mw
@@ -1,3 +1,6 @@
 {{S}}
-'''Samone (TO)''' éte 'nu comune [[Italie|tagliáne]] de 1.479 crestiáne.
-[[Category:Gëografije]]
+'''Samone''' éte 'nu comune [[Italie|tagliáne]] de 1.479 crestiáne.
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
