--- a/San_Benigno_Canavese.mw
+++ b/San_Benigno_Canavese.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''San Benigno Canavese''' éte 'nu comune [[Italie|tagliáne]] de 5.307 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
