*Empty MediaWiki Message*

--- a/San_Carlo_Canavese.mw
+++ b/San_Carlo_Canavese.mw
@@ -1,3 +1,6 @@
 {{S}}
-'''San Carlo Canavese''' éte 'nu comune [[Italie|tagliáne]] de 3672       crestiáne.
-[[Category:Gëografije]]
+'''San Carlo Canavese''' éte 'nu comune [[Itaglie|tagliáne]] de 3672 crestiáne.
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
