--- a/San_Colombano_Belmonte.mw
+++ b/San_Colombano_Belmonte.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''San Colombano Belmonte''' éte 'nu comune [[Italie|tagliáne]] de 361 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
