--- a/San_Francesco_al_Campo.mw
+++ b/San_Francesco_al_Campo.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''San Francesco al Campo''' éte 'nu comune [[Italie|tagliáne]] de 4.550 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
