--- a/San_Germano_Chisone.mw
+++ b/San_Germano_Chisone.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''San Germano Chisone''' éte 'nu comune [[Italie|tagliáne]] de 1.842 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
