--- a/San_Giorgio_Canavese.mw
+++ b/San_Giorgio_Canavese.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''San Giorgio Canavese''' éte 'nu comune [[Italie|tagliáne]] de 2.397 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
