--- a/San_Giorio_di_Susa.mw
+++ b/San_Giorio_di_Susa.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''San Giorio di Susa''' éte 'nu comune [[Italie|tagliáne]] de 949 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
