--- a/San_Giusto_Canavese.mw
+++ b/San_Giusto_Canavese.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''San Giusto Canavese''' éte 'nu comune [[Italie|tagliáne]] de 3.074 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
