--- a/San_Mauro_Torinese.mw
+++ b/San_Mauro_Torinese.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''San Mauro Torinese''' éte 'nu comune [[Italie|tagliáne]] de 18.367 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
