*Empty MediaWiki Message*

--- a/San_Pietro_Val_Lemina.mw
+++ b/San_Pietro_Val_Lemina.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''San Pietro Val Lemina''' éte 'nu comune [[Italie|tagliáne]] de 1.480 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
