--- a/San_Ponso.mw
+++ b/San_Ponso.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''San Ponso''' éte 'nu comune [[Italie|tagliáne]] de 265 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
