--- a/San_Raffaele_Cimena.mw
+++ b/San_Raffaele_Cimena.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''San Raffaele Cimena''' éte 'nu comune [[Italie|tagliáne]] de 2.815 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
