*Empty MediaWiki Message*

--- a/San_Secondo_di_Pinerolo.mw
+++ b/San_Secondo_di_Pinerolo.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''San Secondo di Pinerolo''' éte 'nu comune [[Italie|tagliáne]] de 3.403 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
