*Empty MediaWiki Message*

--- a/Sant'Ambrogio_di_Torino.mw
+++ b/Sant'Ambrogio_di_Torino.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Sant'Ambrogio di Torino''' éte 'nu comune [[Italie|tagliáne]] de 4.274 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
