--- a/Sauze_d'Oulx.mw
+++ b/Sauze_d'Oulx.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Sauze d'Oulx''' éte 'nu comune [[Italie|tagliáne]] de 982 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
