--- a/Sauze_di_Cesana.mw
+++ b/Sauze_di_Cesana.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Sauze di Cesana''' éte 'nu comune [[Italie|tagliáne]] de 186 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
