--- a/Scalenghe.mw
+++ b/Scalenghe.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Scalenghe''' éte 'nu comune [[Italie|tagliáne]] de 3.156 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
