--- a/Sciolze.mw
+++ b/Sciolze.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Sciolze''' éte 'nu comune [[Italie|tagliáne]] de 1.520 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
