--- a/Settimo_Vittone.mw
+++ b/Settimo_Vittone.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Settimo Vittone''' éte 'nu comune [[Italie|tagliáne]] de 1.581 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
