--- a/Strambinello.mw
+++ b/Strambinello.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Strambinello''' éte 'nu comune [[Italie|tagliáne]] de 258 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
