--- a/Strambino.mw
+++ b/Strambino.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Strambino''' éte 'nu comune [[Italie|tagliáne]] de 6.132 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
