--- a/Tavagnasco.mw
+++ b/Tavagnasco.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Tavagnasco''' éte 'nu comune [[Italie|tagliáne]] de 820 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
