--- a/Torrazza_Piemonte.mw
+++ b/Torrazza_Piemonte.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Torrazza Piemonte''' éte 'nu comune [[Italie|tagliáne]] de 2.373 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
