--- a/Torre_Pellice.mw
+++ b/Torre_Pellice.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Torre Pellice''' éte 'nu comune [[Italie|tagliáne]] de 4.573 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
