--- a/Traversella.mw
+++ b/Traversella.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Traversella''' éte 'nu comune [[Italie|tagliáne]] de 386 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
