*Empty MediaWiki Message*

--- a/Alessandria.mw
+++ b/Alessandria.mw
@@ -34,6 +34,8 @@
 '''Alessandria''' éte 'nu comune [[Italie|tagliáne]] de 92.430 crestiáne.
 
 [[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Alessandria]]
+{{Provinge de Alessandria}}
 
 [[ar:ألساندريا]]
 [[bg:Алесандрия]]
