*Empty MediaWiki Message*

--- a/Dueville.mw
+++ b/Dueville.mw
@@ -1,3 +1,36 @@
 {{S}}
+{{Comune  <!-- per la compilazione vedi Aiuto:Comune -->
+|nomeComune = Dueville
+|linkStemma = Dueville-Stemma.gif
+|siglaRegione = VEN
+|siglaProvincia = VI
+|latitudineGradi = 45
+|latitudineMinuti = 38
+|latitudineSecondi = 0
+|longitudineGradi = 11
+|longitudineMinuti = 33
+|longitudineSecondi = 0
+|mappaX = 123
+|mappaY = 52
+|altitudine = 57
+|superficie = 20
+|abitanti = 13.735
+|anno = 28 febbraio 2007
+|densita = 687
+|frazioni = Passo di Riva, Povolaro, Vivaro
+|comuniLimitrofi = [[Caldogno]], [[Montecchio Precalcino]], [[Monticello Conte Otto]], [[Sandrigo]], [[Vicenza]], [[Villaverla]]
+|cap = 36031
+|prefisso = [[0444]]
+|istat = 024038
+|fiscale = D379
+|nomeAbitanti = duevillesi
+|patrono = [[Maria, madre di Gesù|Santa Maria]]
+|festivo = [[26 luglio]]
+|sito = http://www.comune.dueville.vi.it
+}}
+
 '''Dueville''' éte 'nu comune [[Italie|tagliáne]] de 13.580 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Veneto]]
+[[Category:Comune d'a provinge de Viscenze]]
+{{Provinge de Viscenze}}
