*Empty MediaWiki Message*

--- a/Dueville.mw
+++ b/Dueville.mw
@@ -15,7 +15,7 @@
 |altitudine = 57
 |superficie = 20
 |abitanti = 13.735
-|anno = 28 febbraio 2007
+|anno = 28 febbrare 2007
 |densita = 687
 |frazioni = Passo di Riva, Povolaro, Vivaro
 |comuniLimitrofi = [[Caldogno]], [[Montecchio Precalcino]], [[Monticello Conte Otto]], [[Sandrigo]], [[Vicenza]], [[Villaverla]]
@@ -24,12 +24,12 @@
 |istat = 024038
 |fiscale = D379
 |nomeAbitanti = duevillesi
-|patrono = [[Maria, madre di Gesù|Santa Maria]]
-|festivo = [[26 luglio]]
+|patrono = [[Sanda Fosca]]
+|festivo = [[26 luglie]]
 |sito = http://www.comune.dueville.vi.it
 }}
 
-'''Dueville''' éte 'nu comune [[Italie|tagliáne]] de 13.580 crestiáne.
+'''Dueville''' éte 'nu comune [[Italie|tagliáne]] de 13.735 crestiáne.
 
 [[Category:Comune d'u Veneto]]
 [[Category:Comune d'a provinge de Viscenze]]
