--- a/Albera_Ligure.mw
+++ b/Albera_Ligure.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Albera Ligure''' éte 'nu comune [[Italie|tagliáne]] de 337 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Alessandria]]
+{{Provinge de Alessandria}}
