--- a/Alfiano_Natta.mw
+++ b/Alfiano_Natta.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Alfiano Natta''' éte 'nu comune [[Italie|tagliáne]] de 785 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Alessandria]]
+{{Provinge de Alessandria}}
