*Empty MediaWiki Message*

--- a/Alice_Bel_Colle.mw
+++ b/Alice_Bel_Colle.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Alice Bel Colle''' éte 'nu comune [[Italie|tagliáne]] de 780 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Alessandria]]
+{{Provinge de Alessandria}}
