--- a/Alluvioni_Cambiò.mw
+++ b/Alluvioni_Cambiò.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Alluvioni Cambiò''' éte 'nu comune [[Italie|tagliáne]] de 1.009 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Alessandria]]
+{{Provinge de Alessandria}}
