--- a/Taranto_FC_1927.mw
+++ b/Taranto_FC_1927.mw
@@ -81,25 +81,25 @@ Jndr'à st'anne 'u '''Tarde Sport''' ha ottenute 'u 11° puest jndr'à prime div
 
 == Rosa 2009-2010 ==
 
-*{{Bandiera|Italia}} Nicola Barasso   ('''P''')
-*{{Bandiera|Italia}} Vito Di Bari   ('''D''')
-*{{Bandiera|Italia}} Vincenzo Migliaccio   ('''D''')
-*{{Bandiera|Italia}} Ivano Pastore   ('''D''')
-*{{Bandiera|Italia}} Fabio Prosperi   ('''D''')
-*{{Bandiera|Italia}} Alessandro Carrozza   ('''C''')
-*{{Bandiera|Italia}} Davide Giorgino   ('''C''')
-*{{Bandiera|Iran}} Alì Lolli   ('''C''')
-*{{Bandiera|Italia}} Franco Micco   ('''C''')
-*{{Bandiera|Italia}} Daniele Sciaudone   ('''C''')
-*{{Bandiera|Italia}} Fernando Horacio Spinelli   ('''C''')
-*{{Bandiera|Brasile}} William Barbosa da Silva   ('''A''')
-*{{Bandiera|Italia}} Davide Dionigi   ('''A''')
-*{{Bandiera|Italia}} Tommaso Marolda   ('''A''')
-*{{Bandiera|Italia}} Riccardo Innocenti   ('''A''')
+*{{Bandiera|Italia}} Necole Barasso ('''P''')
+*{{Bandiera|Italia}} Vito Di Bari ('''D''')
+*{{Bandiera|Italia}} Vescinze Migliaccio ('''D''')
+*{{Bandiera|Italia}} Ivano Pastore ('''D''')
+*{{Bandiera|Italia}} Fabio Prosperi ('''D''')
+*{{Bandiera|Italia}} Alessandre Carrozza ('''C''')
+*{{Bandiera|Italia}} Davide Giorgino ('''C''')
+*{{Bandiera|Iran}} Alì Lolli ('''C''')
+*{{Bandiera|Italia}} Franghe Micco ('''C''')
+*{{Bandiera|Italia}} Daniele Sciaudone ('''C''')
+*{{Bandiera|Italia}} Fernando Horacio Spinelli ('''C''')
+*{{Bandiera|Brasile}} William Barbosa da Silva ('''A''')
+*{{Bandiera|Italia}} Davide Dionigi ('''A''')
+*{{Bandiera|Italia}} Tummase Marolda ('''A''')
+*{{Bandiera|Italia}} Riccarde Innocenti ('''A''')
 
-'''Allenatore: '''{{Bandiera|ITA}} Piero Braglia<br>
-'''Vice allenatore''' e '''preparatore portieri: '''{{Bandiera|ITA}} Mauro Isetto<br>
-
+'''Allenatore: '''{{Bandiera|ITA}} Piero Braglia
+'''Vice allenatore''' e '''preparatore portieri: '''{{Bandiera|ITA}} Mauro Isetto
+'''Preparatore Atletiche''' {{Bandiera|ITA}} Agostino Marras
 
 == Palmares ==
 
