/* Storie */ alcune correzioni

--- a/Taranto_FC_1927.mw
+++ b/Taranto_FC_1927.mw
@@ -63,16 +63,15 @@ sito=www.tarantochannel.tv
 
 == Storie ==
 
-'A suggettate nasce 'u [[11 luglio]] [[1927]], dalla fusione 'mbrà ''U.S. Pro Itaglie'' e ''Audace Foot Ball Club'',  nasce 'a ''A.S. Tarde'',e jindr'à estate d'u [[1928]] assorbì puru 'u ''U.S. Nettuno''.
+'A suggettate nasce l'[[11 luglie]] [[1927]], da 'a fusione 'mbrà ''U.S. Pro Itaglie'' e ''Audace Foot Ball Club'', e nascìe 'a ''A.S. Tarde'' e, jndr'à l'estate d'u [[1928]] assorbì pure 'u ''U.S. Nettuno''.
 
-'U [[15 luglio]] [[1998]], dopo 'u fallemento, nasce 'a ''U.S. Arsenaltarde''.
+'U [[15 luglie]] [[1998]], apprisse 'u fallimende, nascìe 'a ''U.S. Arsenaltarde''.
 
-'U [[16 dicembre]] [[2004]], dopo n'asta, nasce 'u '''Tarde Sport S.r.l.''', c'à restituzione d'ù titole sportive da parte d'à [[FIGC]].
+'U [[16 decemmre]] [[2004]], dopo n'asta, nascìe 'u '''Tarde Sport S.r.l.''', c'à restituzione d'ù titole sportive da parte d'à [[FIGC]].
 
-Osce 'a squadra sciuca jindre 'u scirone B d'u campiunet de Lega Pro Prime Divisione (quèdde ca fuéve 'a C1).
+Osce 'a squadra scioche jndre 'u girone B d'u campionate de Lega Pro Prima Divisione (quèdde ca ere 'a C1).
 
-'U sciucatur cchiù rappresendative de quèste squadre jè steté '''[[Erasmo Iacovone]]'''(Capracotta, 22 abrìle 1952 – San Giorgio Ionico, 6 febbrare 1978).
-
+'U sciucatore cchiù rappresendative de quèsta squadre ha state '''[[Erasmo Iacovone]]'''(Capracotta, 22 abrìle 1952 – San Giorgio Ionico, 6 febbrare 1978).
 
 == Staggione 2008/2009 ==
 
