--- a/Taranto_FC_1927.mw
+++ b/Taranto_FC_1927.mw
@@ -75,8 +75,7 @@ Osce 'a squadra scioche jndre 'u girone B d'u campionate de Lega Pro Prima Divis
 
 == Staggione 2008/2009 ==
 
-Jndr'à st'anne 'u '''Tarde Sport''' ha ottenute 'u 11° puest jndr'à prime divisione d'a Lega Pro.
-
+Jndr'à st'anne 'u '''Tarde Sport''' ha ottenute 'u 9° poste jndr'à prime divisione d'a Lega Pro.
 
 == Rosa 2009-2010 ==
 
