--- a/Tarde.mw
+++ b/Tarde.mw
@@ -42,6 +42,8 @@ Rùmane ind'ô [[Gurfe de Tarde]] sus'ô [[Mar Jonio]], s'allonghe 'mbrà ddo' m
 == Economije ==
 Tarde accogghie 'u puèrte 'ndustriale e mmercandìle l'Arsenale d'a Marina Meletare Tagliáne. Ôte ô puèrte e a ll'Arsenale, Tarde accogghie pure 'a séde d'u stàbbele siderurgeche [[ILVA]], vune de le cchiù 'ranne fàbbreche siderurgeche d'[[Europe]], petrolchimeche, 'nu cemendificie e 'nu candiére navale.
 
+Pe ingentivà l'economije de Tarde, ca cu 'a crisi de l'accaije ha avute 'na bella mazzate, ha state richieste a 'u Guverne tagliàne de definì 'na zona franghe, ca vè da Porta Napule a le Tammorre. Jndr'à sta zona franghe le 'mbrenditure ca voleve cu 'nvestene, avene 'nu sbuenne de sgravie fiscale.
+
 == 'U disseste finanziarie ==
 'U Comunede Tarde se n'a sciute in disseste finanziarie purcè téne 'nu sacche de dèbete: 'u [[31 dicemmre]] [[2005]] teneve almene 637 miliùne de euro de dèbete, cumme ha ditte Francesco Boccia, 'u cape da commissione de liquidazione de Tarde. Onne ditte ca 'u disseste de Tarde è 'u cchiù gruesse disseste ca ha maje state in Itaglie.
 'A giunda comunele ca 'a causete 'u disseste ere cumannete da 'u sinnache [[Rossana Di Bello]] e 'u vicesinnache [[Michele Tucci]].
