/* Provinge */  -> Area Vasta

--- a/Tarde.mw
+++ b/Tarde.mw
@@ -70,10 +70,12 @@ Femmene
 Maschele
 *[[Dream Team Tarde|Dream Team Comes Tarde]]
 
-== Provinge ==
-'A provingia de Tarde téne 29 comune, e ss'abbale d'agricolture, pèsche, 'ndustrie areonauteche, chimeche ,alemendare, tèssel'e dd'artigianate d'a lègne, d'u vitre e d'a cerameche.
+== Area Vasta ==
+L'area vasta de Tarde téne 28 comune, e Tarde ète 'u comune capofile. 'A convenzione pa ccreazzione de st'area vasta ha state firmate jndr'à 'u [[2007]]<ref>{{Cita pubblicazione|url=http://areavasta.comune.taranto.it/ApriAllegato.php?versioneid=121|titolo=Convenzione costitutiva area vasta tarantina|accesso=07-05-2009|formato=PDF}}</ref>.
 
-=== Comune d'a [[Provinge de Tarde]] ===
+=== Enti ca onne aderite a l'area vasta de Tarde ===
+* [[Provinge de Tarde]]
+* Tarde
 * [[Avetrana]]
 * [[Carusine]]
 * [[Castellaneta]]
@@ -85,7 +87,6 @@ Maschele
 * [[Leporano]]
 * [[Lizzano (TA)|Lizzano]]
 * [[Manduria]]
-* [[Martina Franca]]
 * [[Maruggio]]
 * [[Mazzafre]]
 * [[Monteiasi]]
@@ -100,9 +101,13 @@ Maschele
 * [[San Marzano di San Giuseppe]]
 * [[Sava (TA)|Sava]]
 * [[Statte]]
-* Tarde
 * [[Torricella (TA)|Torricella]]
 * [[Vurtàgghie]]
+* [[Comunitate Mondane Murgia Tarandine]]
+* Parco Reggionale "Terra de le Gravine"
+* Unione de le Comune "Montedoro"
+* Unione de le Comune de Statte, Mazzafre e Crispiano
+* Unione de le Comune "Terre d'u Mare e d'u Sole"
 
 == Vôsce cullegate ==
 *[[Dialètte tarandine]]
