/* Enti ca onne aderite a l'area vasta de Tarde */

--- a/Tarde.mw
+++ b/Tarde.mw
@@ -105,9 +105,9 @@ L'area vasta de Tarde téne 28 comune, e Tarde ète 'u comune capofile. 'A conve
 * [[Vurtàgghie]]
 * [[Comunitate Mondane Murgia Tarandine]]
 * Parco Reggionale "Terra de le Gravine"
-* Unione de le Comune "Montedoro"
-* Unione de le Comune de Statte, Mazzafre e Crispiano
-* Unione de le Comune "Terre d'u Mare e d'u Sole"
+* Aunìone de le Comune "Montedoro"
+* Aunìone de le Comune de Statte, Mazzafre e Crispiano
+* Aunìone de le Comune "Terre d'u Mare e d'u Sole"
 
 == Vôsce cullegate ==
 *[[Dialètte tarandine]]
