*Empty MediaWiki Message*

--- a/Tarde.mw
+++ b/Tarde.mw
@@ -118,6 +118,8 @@ L'area vasta de Tarde téne 28 comune, e Tarde ète 'u comune capofile. 'A conve
 == Collegamende sus a indernette ==
 *[http://www.comune.taranto.it/ Commune 'e Tarde]
 
+== Note ==
+<references/>
 {{Provinge de Tarde}}
 
 [[Category:Tarde| ]]
