/* Collegamende sus a indernette */

--- a/Tarde.mw
+++ b/Tarde.mw
@@ -116,7 +116,8 @@ L'area vasta de Tarde téne 28 comune, e Tarde ète 'u comune capofile. 'A conve
 *[[image:Commons-logo.svg|20px]] '''[[:Commons:Main Page|Wikimedia Commons]]''' tene file multimediale pe '''[[:commons:Category:Taranto|Tarde]]'''
 
 == Collegamende sus a indernette ==
-*[http://www.comune.taranto.it/ Commune 'e Tarde]
+*[http://www.comune.taranto.it/ Comune de Tarde]
+*[http://www.zonafrancataranto.it/ Zona Franghe de Tarde]
 
 == Note ==
 <references/>
