--- a/Avolasca.mw
+++ b/Avolasca.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Avolasca''' éte 'nu comune [[Italie|tagliáne]] de 287 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Alessandria]]
+{{Provinge de Alessandria}}
