-en:, id:, ja:, pt:, ru:, scn:, simple:, uk:, modify pl:

--- a/Sardèdde.mw
+++ b/Sardèdde.mw
@@ -77,7 +77,6 @@ Càrne saporite, presciate, tanda frische ca se ponne preparà sott'olie o sotte
 [[ca:Sardina]]
 [[cy:Sardîn]]
 [[de:Sardine]]
-[[en:Sardine]]
 [[es:Sardina pilchardus]]
 [[eu:Sardina]]
 [[fa:ساردین]]
@@ -86,11 +85,9 @@ Càrne saporite, presciate, tanda frische ca se ponne preparà sott'olie o sotte
 [[gl:Sardiña]]
 [[he:סרדין]]
 [[ht:Sadin]]
-[[hu:Szardínia (hal)]]
-[[id:Sarden]]
+[[hu:Szardínia (hal)]
 [[io:Sardino]]
 [[it:Sardina pilchardus]]
-[[ja:イワシ]]
 [[ko:정어리]]
 [[lb:Sardinn]]
 [[ml:മത്തി]]
@@ -98,13 +95,8 @@ Càrne saporite, presciate, tanda frische ca se ponne preparà sott'olie o sotte
 [[nn:Sardin]]
 [[no:Sardin]]
 [[oc:Sarda]]
-[[pl:Sardynka]]
-[[pt:Sardinha]]
+[[pl:Sardynka europejska]]
 [[qu:Sardina]]
-[[ru:Сардина]]
-[[scn:Palamita]]
-[[simple:Sardine]]
 [[sv:Sardin]]
 [[tr:Sardalya]]
-[[uk:Сардинії]]
 [[zh:沙丁魚]]
