--- a/Balzola.mw
+++ b/Balzola.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Balzola''' éte 'nu comune [[Italie|tagliáne]] de 1.447 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Alessandria]]
+{{Provinge de Alessandria}}
