--- a/Bassignana.mw
+++ b/Bassignana.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Bassignana''' éte 'nu comune [[Italie|tagliáne]] de 1.802 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Alessandria]]
+{{Provinge de Alessandria}}
