*Empty MediaWiki Message*

--- a/Bistagno.mw
+++ b/Bistagno.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Bistagno''' éte 'nu comune [[Italie|tagliáne]] de 1.831 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Alessandria]]
+{{Provinge de Alessandria}}
