--- a/Borghe_San_Martine.mw
+++ b/Borghe_San_Martine.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Borgo San Martino''' éte 'nu comune [[Italie|tagliáne]] de 1.379 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Alessandria]]
+{{Provinge de Alessandria}}
