--- a/Borgoratto_Alessandrino.mw
+++ b/Borgoratto_Alessandrino.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Borgoratto Alessandrino''' éte 'nu comune [[Italie|tagliáne]] de 607 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Alessandria]]
+{{Provinge de Alessandria}}
