--- a/Bosco_Marengo.mw
+++ b/Bosco_Marengo.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Bosco Marengo''' éte 'nu comune [[Italie|tagliáne]] de 2.521 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Alessandria]]
+{{Provinge de Alessandria}}
