--- a/Cabella_Ligure.mw
+++ b/Cabella_Ligure.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Cabella Ligure''' éte 'nu comune [[Italie|tagliáne]] de 596 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Alessandria]]
+{{Provinge de Alessandria}}
