--- a/Camagna_Monferrato.mw
+++ b/Camagna_Monferrato.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Camagna Monferrato''' éte 'nu comune [[Italie|tagliáne]] de 551 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Alessandria]]
+{{Provinge de Alessandria}}
