--- a/Carbonara_Scrivia.mw
+++ b/Carbonara_Scrivia.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Carbonara Scrivia''' éte 'nu comune [[Italie|tagliáne]] de 1.019 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Alessandria]]
+{{Provinge de Alessandria}}
