--- a/Carentino.mw
+++ b/Carentino.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Carentino''' éte 'nu comune [[Italie|tagliáne]] de 311 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Alessandria]]
+{{Provinge de Alessandria}}
