--- a/Capriata_d'Orba.mw
+++ b/Capriata_d'Orba.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Capriata d'Orba''' éte 'nu comune [[Italie|tagliáne]] de 1.857 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Alessandria]]
+{{Provinge de Alessandria}}
