--- a/Carrega_Ligure.mw
+++ b/Carrega_Ligure.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Carrega Ligure''' éte 'nu comune [[Italie|tagliáne]] de 113 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Alessandria]]
+{{Provinge de Alessandria}}
