--- a/Carrosio.mw
+++ b/Carrosio.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Carrosio''' éte 'nu comune [[Italie|tagliáne]] de 475 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Alessandria]]
+{{Provinge de Alessandria}}
