--- a/Cartosio.mw
+++ b/Cartosio.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Cartosio''' éte 'nu comune [[Italie|tagliáne]] de 778 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Alessandria]]
+{{Provinge de Alessandria}}
