--- a/Casal_Cermelli.mw
+++ b/Casal_Cermelli.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Casal Cermelli''' éte 'nu comune [[Italie|tagliáne]] de 1.229 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Alessandria]]
+{{Provinge de Alessandria}}
