--- a/Casaleggio_Boiro.mw
+++ b/Casaleggio_Boiro.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Casaleggio Boiro''' éte 'nu comune [[Italie|tagliáne]] de 390 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Alessandria]]
+{{Provinge de Alessandria}}
