--- a/Casalnoceto.mw
+++ b/Casalnoceto.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Casalnoceto''' éte 'nu comune [[Italie|tagliáne]] de 907 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Alessandria]]
+{{Provinge de Alessandria}}
