--- a/Casasco.mw
+++ b/Casasco.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Casasco''' éte 'nu comune [[Italie|tagliáne]] de 137 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Alessandria]]
+{{Provinge de Alessandria}}
