--- a/Cassine.mw
+++ b/Cassine.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Cassine''' éte 'nu comune [[Italie|tagliáne]] de 3.031 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Alessandria]]
+{{Provinge de Alessandria}}
