*Empty MediaWiki Message*

--- a/Castellania.mw
+++ b/Castellania.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Castellania''' éte 'nu comune [[Italie|tagliáne]] de 99 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Alessandria]]
+{{Provinge de Alessandria}}
