--- a/Castellazzo_Bormida.mw
+++ b/Castellazzo_Bormida.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Castellazzo Bormida''' éte 'nu comune [[Italie|tagliáne]] de 4.599 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Alessandria]]
+{{Provinge de Alessandria}}
