--- a/Castelletto_Monferrato.mw
+++ b/Castelletto_Monferrato.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Castelletto Monferrato''' éte 'nu comune [[Italie|tagliáne]] de 1.537 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Alessandria]]
+{{Provinge de Alessandria}}
