--- a/Castelspina.mw
+++ b/Castelspina.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Castelspina''' éte 'nu comune [[Italie|tagliáne]] de 411 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Alessandria]]
+{{Provinge de Alessandria}}
