*Empty MediaWiki Message*

--- a/Castelnuovo_Scrivia.mw
+++ b/Castelnuovo_Scrivia.mw
@@ -29,4 +29,7 @@
 |sito = http://www.castelnuovoscrivia.info
 }} 
 '''Castelnuovo Scrivia''' éte 'nu comune [[Italie|tagliáne]] de 5.559 crestiáne.
+
 [[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Alessandria]]
+{{Provinge de Alessandria}}
