--- a/Cavatore.mw
+++ b/Cavatore.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Cavatore''' éte 'nu comune [[Italie|tagliáne]] de 316 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Alessandria]]
+{{Provinge de Alessandria}}
