--- a/Costa_Vescovato.mw
+++ b/Costa_Vescovato.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Costa Vescovato''' éte 'nu comune [[Italie|tagliáne]] de 361 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Alessandria]]
+{{Provinge de Alessandria}}
