--- a/Cremolino.mw
+++ b/Cremolino.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Cremolino''' éte 'nu comune [[Italie|tagliáne]] de 1.069 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Alessandria]]
+{{Provinge de Alessandria}}
