--- a/Denice.mw
+++ b/Denice.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Denice''' éte 'nu comune [[Italie|tagliáne]] de 202 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Alessandria]]
+{{Provinge de Alessandria}}
