--- a/Fabbrica_Curone.mw
+++ b/Fabbrica_Curone.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Fabbrica Curone''' éte 'nu comune [[Italie|tagliáne]] de 774 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Alessandria]]
+{{Provinge de Alessandria}}
