*Empty MediaWiki Message*

--- a/Felizzano.mw
+++ b/Felizzano.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Felizzano''' éte 'nu comune [[Italie|tagliáne]] de 2.431 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Alessandria]]
+{{Provinge de Alessandria}}
