--- a/Francavilla_Bisio.mw
+++ b/Francavilla_Bisio.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Francavilla Bisio''' éte 'nu comune [[Italie|tagliáne]] de 458 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Alessandria]]
+{{Provinge de Alessandria}}
