--- a/Frascaro.mw
+++ b/Frascaro.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Frascaro''' éte 'nu comune [[Italie|tagliáne]] de 456 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Alessandria]]
+{{Provinge de Alessandria}}
