*Empty MediaWiki Message*

--- a/Frassinello_Monferrato.mw
+++ b/Frassinello_Monferrato.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Frassinello Monferrato''' éte 'nu comune [[Italie|tagliáne]] de 529 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Alessandria]]
+{{Provinge de Alessandria}}
