--- a/Frugarolo.mw
+++ b/Frugarolo.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Frugarolo''' éte 'nu comune [[Italie|tagliáne]] de 1.970 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Alessandria]]
+{{Provinge de Alessandria}}
