--- a/Fubine.mw
+++ b/Fubine.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Fubine''' éte 'nu comune [[Italie|tagliáne]] de 1.681 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Alessandria]]
+{{Provinge de Alessandria}}
