--- a/Gamalero.mw
+++ b/Gamalero.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Gamalero''' éte 'nu comune [[Italie|tagliáne]] de 804 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Alessandria]]
+{{Provinge de Alessandria}}
