*Empty MediaWiki Message*

--- a/Garbagna_(AL).mw
+++ b/Garbagna_(AL).mw
@@ -1,3 +1,6 @@
 {{S}}
-'''Garbagna (AL)''' éte 'nu comune [[Italie|tagliáne]] de 721 crestiáne.
-[[Category:Gëografije]]
+'''Garbagna''' éte 'nu comune [[Italie|tagliáne]] de 721 crestiáne.
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Alessandria]]
+{{Provinge de Alessandria}}
