--- a/Gremiasco.mw
+++ b/Gremiasco.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Gremiasco''' éte 'nu comune [[Italie|tagliáne]] de 373 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Alessandria]]
+{{Provinge de Alessandria}}
