--- a/Grognardo.mw
+++ b/Grognardo.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Grognardo''' éte 'nu comune [[Italie|tagliáne]] de 321 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Alessandria]]
+{{Provinge de Alessandria}}
