--- a/Grondona.mw
+++ b/Grondona.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Grondona''' éte 'nu comune [[Italie|tagliáne]] de 536 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Alessandria]]
+{{Provinge de Alessandria}}
