--- a/Guazzora.mw
+++ b/Guazzora.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Guazzora''' éte 'nu comune [[Italie|tagliáne]] de 308 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Alessandria]]
+{{Provinge de Alessandria}}
