--- a/Lerma.mw
+++ b/Lerma.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Lerma''' éte 'nu comune [[Italie|tagliáne]] de 828 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Alessandria]]
+{{Provinge de Alessandria}}
