*Empty MediaWiki Message*

--- a/Lu_(AL).mw
+++ b/Lu_(AL).mw
@@ -1,3 +1,6 @@
 {{S}}
-'''Lu (AL)''' éte 'nu comune [[Italie|tagliáne]] de 1.209 crestiáne.
-[[Category:Gëografije]]
+'''Lu''' éte 'nu comune [[Italie|tagliáne]] de 1.209 crestiáne.
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Alessandria]]
+{{Provinge de Alessandria}}
