*Empty MediaWiki Message*

--- a/Malvicino.mw
+++ b/Malvicino.mw
@@ -1,6 +1,9 @@
 {{S}}
 '''Malvicino''' éte 'nu comune [[Italie|tagliáne]] de 119 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Alessandria]]
+{{Provinge de Alessandria}}
 
 [[de:Malvicino]]
 [[en:Malvicino]]
