--- a/Masio.mw
+++ b/Masio.mw
@@ -1,6 +1,9 @@
 {{S}}
 '''Masio''' éte 'nu comune [[Italie|tagliáne]] de 1.481 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Alessandria]]
+{{Provinge de Alessandria}}
 
 [[de:Masio]]
 [[en:Masio]]
