--- a/Melazzo.mw
+++ b/Melazzo.mw
@@ -1,6 +1,9 @@
 {{S}}
 '''Melazzo''' éte 'nu comune [[Italie|tagliáne]] de 1.262 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Alessandria]]
+{{Provinge de Alessandria}}
 
 [[de:Melazzo]]
 [[en:Melazzo]]
