*Empty MediaWiki Message*

--- a/Merana.mw
+++ b/Merana.mw
@@ -1,6 +1,9 @@
 {{S}}
 '''Merana''' éte 'nu comune [[Italie|tagliáne]] de 182 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Alessandria]]
+{{Provinge de Alessandria}}
 
 [[de:Merana]]
 [[en:Merana]]
