--- a/Mirabello_Monferrato.mw
+++ b/Mirabello_Monferrato.mw
@@ -1,6 +1,9 @@
 {{S}}
 '''Mirabello Monferrato''' éte 'nu comune [[Italie|tagliáne]] de 1.368 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Alessandria]]
+{{Provinge de Alessandria}}
 
 [[de:Mirabello Monferrato]]
 [[en:Mirabello Monferrato]]
