--- a/Molare_(AL).mw
+++ b/Molare_(AL).mw
@@ -1,3 +1,6 @@
 {{S}}
-'''Molare (AL)''' éte 'nu comune [[Italie|tagliáne]] de 2.166 crestiáne.
-[[Category:Gëografije]]
+'''Molare''' éte 'nu comune [[Italie|tagliáne]] de 2.166 crestiáne.
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Alessandria]]
+{{Provinge de Alessandria}}
