--- a/Molino_de_le_Tuèrte.mw
+++ b/Molino_de_le_Tuèrte.mw
@@ -1,6 +1,9 @@
 {{S}}
 '''Molino dei Torti''' éte 'nu comune [[Italie|tagliáne]] de 701 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Alessandria]]
+{{Provinge de Alessandria}}
 
 [[de:Molino dei Torti]]
 [[en:Molino dei Torti]]
