*Empty MediaWiki Message*

--- a/Momperone.mw
+++ b/Momperone.mw
@@ -1,6 +1,9 @@
 {{S}}
 '''Momperone''' éte 'nu comune [[Italie|tagliáne]] de 223 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Alessandria]]
+{{Provinge de Alessandria}}
 
 [[de:Momperone]]
 [[en:Momperone]]
