--- a/Mombello_Monferrato.mw
+++ b/Mombello_Monferrato.mw
@@ -1,6 +1,9 @@
 {{S}}
 '''Mombello Monferrato''' éte 'nu comune [[Italie|tagliáne]] de 1.110 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Alessandria]]
+{{Provinge de Alessandria}}
 
 [[de:Mombello Monferrato]]
 [[en:Mombello Monferrato]]
