--- a/Moncestino.mw
+++ b/Moncestino.mw
@@ -1,6 +1,9 @@
 {{S}}
 '''Moncestino''' éte 'nu comune [[Italie|tagliáne]] de 239 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Alessandria]]
+{{Provinge de Alessandria}}
 
 [[de:Moncestino]]
 [[en:Moncestino]]
