--- a/Mongiardino_Ligure.mw
+++ b/Mongiardino_Ligure.mw
@@ -1,6 +1,9 @@
 {{S}}
 '''Mongiardino Ligure''' éte 'nu comune [[Italie|tagliáne]] de 190 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Alessandria]]
+{{Provinge de Alessandria}}
 
 [[de:Mongiardino Ligure]]
 [[en:Mongiardino Ligure]]
