--- a/Monleale.mw
+++ b/Monleale.mw
@@ -1,6 +1,9 @@
 {{S}}
 '''Monleale''' éte 'nu comune [[Italie|tagliáne]] de 623 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Alessandria]]
+{{Provinge de Alessandria}}
 
 [[de:Monleale]]
 [[en:Monleale]]
