--- a/Montacuto.mw
+++ b/Montacuto.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Montacuto''' éte 'nu comune [[Italie|tagliáne]] de 340 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Alessandria]]
+{{Provinge de Alessandria}}
