--- a/Montecastello.mw
+++ b/Montecastello.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Montecastello''' éte 'nu comune [[Italie|tagliáne]] de 359 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Alessandria]]
+{{Provinge de Alessandria}}
