--- a/Montechiaro_d'Acqui.mw
+++ b/Montechiaro_d'Acqui.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Montechiaro d'Acqui''' éte 'nu comune [[Italie|tagliáne]] de 582 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Alessandria]]
+{{Provinge de Alessandria}}
