--- a/Montegioco.mw
+++ b/Montegioco.mw
@@ -1,6 +1,9 @@
 {{S}}
 '''Montegioco''' éte 'nu comune [[Italie|tagliáne]] de 312 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Alessandria]]
+{{Provinge de Alessandria}}
 
 [[de:Montegioco]]
 [[en:Montegioco]]
