--- a/Montemarzino.mw
+++ b/Montemarzino.mw
@@ -1,6 +1,9 @@
 {{S}}
 '''Montemarzino''' éte 'nu comune [[Italie|tagliáne]] de 366 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Alessandria]]
+{{Provinge de Alessandria}}
 
 [[de:Montemarzino]]
 [[en:Montemarzino]]
