--- a/Morano_sul_Po.mw
+++ b/Morano_sul_Po.mw
@@ -1,6 +1,9 @@
 {{S}}
 '''Morano sul Po''' éte 'nu comune [[Italie|tagliáne]] de 1.587 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Alessandria]]
+{{Provinge de Alessandria}}
 
 [[de:Morano sul Po]]
 [[en:Morano sul Po]]
