--- a/Morbello.mw
+++ b/Morbello.mw
@@ -1,6 +1,9 @@
 {{S}}
 '''Morbello''' éte 'nu comune [[Italie|tagliáne]] de 457 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Alessandria]]
+{{Provinge de Alessandria}}
 
 [[de:Morbello]]
 [[en:Morbello]]
