--- a/Mornese.mw
+++ b/Mornese.mw
@@ -1,6 +1,9 @@
 {{S}}
 '''Mornese''' éte 'nu comune [[Italie|tagliáne]] de 709 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Alessandria]]
+{{Provinge de Alessandria}}
 
 [[de:Mornese]]
 [[en:Mornese]]
