--- a/Murisengo.mw
+++ b/Murisengo.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Murisengo''' éte 'nu comune [[Italie|tagliáne]] de 1.521 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Alessandria]]
+{{Provinge de Alessandria}}
