--- a/Morsasco.mw
+++ b/Morsasco.mw
@@ -1,6 +1,9 @@
 {{S}}
 '''Morsasco''' éte 'nu comune [[Italie|tagliáne]] de 687 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Alessandria]]
+{{Provinge de Alessandria}}
 
 [[de:Morsasco]]
 [[en:Morsasco]]
