--- a/Novi_Ligure.mw
+++ b/Novi_Ligure.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Novi Ligure''' éte 'nu comune [[Italie|tagliáne]] de 28.360 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Alessandria]]
+{{Provinge de Alessandria}}
