--- a/Occimiano.mw
+++ b/Occimiano.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Occimiano''' éte 'nu comune [[Italie|tagliáne]] de 1.395 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Alessandria]]
+{{Provinge de Alessandria}}
