--- a/Odalengo_Grande.mw
+++ b/Odalengo_Grande.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Odalengo Grande''' éte 'nu comune [[Italie|tagliáne]] de 528 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Alessandria]]
+{{Provinge de Alessandria}}
