--- a/Odalengo_Piccolo.mw
+++ b/Odalengo_Piccolo.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Odalengo Piccolo''' éte 'nu comune [[Italie|tagliáne]] de 273 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Alessandria]]
+{{Provinge de Alessandria}}
