--- a/Olivola.mw
+++ b/Olivola.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Olivola''' éte 'nu comune [[Italie|tagliáne]] de 145 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Alessandria]]
+{{Provinge de Alessandria}}
