--- a/Orsara_Bormida.mw
+++ b/Orsara_Bormida.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Orsara Bormida''' éte 'nu comune [[Italie|tagliáne]] de 420 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Alessandria]]
+{{Provinge de Alessandria}}
