*Empty MediaWiki Message*

--- a/Ottiglio.mw
+++ b/Ottiglio.mw
@@ -29,4 +29,7 @@
 |sito =  <!-- http://www.comune.bovezzo.bs.it/ -->
 }} 
 '''Ottiglio''' éte 'nu comune [[Italie|tagliáne]] de 694 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Alessandria]]
+{{Provinge de Alessandria}}
