*Empty MediaWiki Message*

--- a/Ozzano_Monferrato.mw
+++ b/Ozzano_Monferrato.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Ozzano Monferrato''' éte 'nu comune [[Italie|tagliáne]] de 1.538 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Alessandria]]
+{{Provinge de Alessandria}}
