--- a/Paderna.mw
+++ b/Paderna.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Paderna''' éte 'nu comune [[Italie|tagliáne]] de 247 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Alessandria]]
+{{Provinge de Alessandria}}
