*Empty MediaWiki Message*

--- a/Pareto.mw
+++ b/Pareto.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Pareto''' éte 'nu comune [[Italie|tagliáne]] de 649 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Alessandria]]
+{{Provinge de Alessandria}}
