--- a/Parodi_Ligure.mw
+++ b/Parodi_Ligure.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Parodi Ligure''' éte 'nu comune [[Italie|tagliáne]] de 753 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Alessandria]]
+{{Provinge de Alessandria}}
