*Empty MediaWiki Message*

--- a/Pecetto_di_Valenza.mw
+++ b/Pecetto_di_Valenza.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Pecetto di Valenza''' éte 'nu comune [[Italie|tagliáne]] de 1.286 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Alessandria]]
+{{Provinge de Alessandria}}
