--- a/Pomaro_Monferrato.mw
+++ b/Pomaro_Monferrato.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Pomaro Monferrato''' éte 'nu comune [[Italie|tagliáne]] de 394 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Alessandria]]
+{{Provinge de Alessandria}}
