--- a/Pontecurone.mw
+++ b/Pontecurone.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Pontecurone''' éte 'nu comune [[Italie|tagliáne]] de 3.848 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Alessandria]]
+{{Provinge de Alessandria}}
