*Empty MediaWiki Message*

--- a/Ponti_(AL).mw
+++ b/Ponti_(AL).mw
@@ -1,3 +1,6 @@
 {{S}}
-'''Ponti (AL)''' éte 'nu comune [[Italie|tagliáne]] de 677 crestiáne.
-[[Category:Gëografije]]
+'''Ponti''' éte 'nu comune [[Italie|tagliáne]] de 677 crestiáne.
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Alessandria]]
+{{Provinge de Alessandria}}
