--- a/Pozzol_Groppo.mw
+++ b/Pozzol_Groppo.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Pozzol Groppo''' éte 'nu comune [[Italie|tagliáne]] de 389 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Alessandria]]
+{{Provinge de Alessandria}}
