--- a/Pozzolo_Formigaro.mw
+++ b/Pozzolo_Formigaro.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Pozzolo Formigaro''' éte 'nu comune [[Italie|tagliáne]] de 4.744 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Alessandria]]
+{{Provinge de Alessandria}}
