--- a/Prasco.mw
+++ b/Prasco.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Prasco''' éte 'nu comune [[Italie|tagliáne]] de 522 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Alessandria]]
+{{Provinge de Alessandria}}
