--- a/Predosa.mw
+++ b/Predosa.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Predosa''' éte 'nu comune [[Italie|tagliáne]] de 2.047 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Alessandria]]
+{{Provinge de Alessandria}}
