--- a/Quattordio.mw
+++ b/Quattordio.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Quattordio''' éte 'nu comune [[Italie|tagliáne]] de 1.704 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Alessandria]]
+{{Provinge de Alessandria}}
