--- a/Ricaldone.mw
+++ b/Ricaldone.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Ricaldone''' éte 'nu comune [[Italie|tagliáne]] de 663 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Alessandria]]
+{{Provinge de Alessandria}}
