--- a/Rivarone.mw
+++ b/Rivarone.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Rivarone''' éte 'nu comune [[Italie|tagliáne]] de 381 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Alessandria]]
+{{Provinge de Alessandria}}
