--- a/Rocca_Grimalda.mw
+++ b/Rocca_Grimalda.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Rocca Grimalda''' éte 'nu comune [[Italie|tagliáne]] de 1.435 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Alessandria]]
+{{Provinge de Alessandria}}
