--- a/Sala_Monferrato.mw
+++ b/Sala_Monferrato.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Sala Monferrato''' éte 'nu comune [[Italie|tagliáne]] de 446 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Alessandria]]
+{{Provinge de Alessandria}}
