*Empty MediaWiki Message*

--- a/San_Cristoforo_(AL).mw
+++ b/San_Cristoforo_(AL).mw
@@ -1,3 +1,6 @@
 {{S}}
-'''San Cristoforo (comune)''' éte 'nu comune [[Italie|tagliáne]] de 603 crestiáne.
-[[Category:Gëografije]]
+'''San Cristoforo''' éte 'nu comune [[Itaglie|tagliáne]] de 603 crestiáne.
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Alessandria]]
+{{Provinge de Alessandria}}
