--- a/San_Giorgio_Monferrato.mw
+++ b/San_Giorgio_Monferrato.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''San Giorgio Monferrato''' éte 'nu comune [[Italie|tagliáne]] de 1.295 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Alessandria]]
+{{Provinge de Alessandria}}
