*Empty MediaWiki Message*

--- a/Serravalle_Scrivia.mw
+++ b/Serravalle_Scrivia.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Serravalle Scrivia''' éte 'nu comune [[Italie|tagliáne]] de 6.087 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Alessandria]]
+{{Provinge de Alessandria}}
