*Empty MediaWiki Message*

--- a/Terruggia.mw
+++ b/Terruggia.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Terruggia''' éte 'nu comune [[Italie|tagliáne]] de 826 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Alessandria]]
+{{Provinge de Alessandria}}
