*Empty MediaWiki Message*

--- a/Terzo_(AL).mw
+++ b/Terzo_(AL).mw
@@ -1,3 +1,6 @@
 {{S}}
-'''Terzo (AL)''' éte 'nu comune [[Italie|tagliáne]] de 874 crestiáne.
-[[Category:Gëografije]]
+'''Terzo''' éte 'nu comune [[Italie|tagliáne]] de 874 crestiáne.
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Alessandria]]
+{{Provinge de Alessandria}}
