*Empty MediaWiki Message*

--- a/Tortona.mw
+++ b/Tortona.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Tortona''' éte 'nu comune [[Italie|tagliáne]] de 26.684 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Alessandria]]
+{{Provinge de Alessandria}}
