*Empty MediaWiki Message*

--- a/Biella.mw
+++ b/Biella.mw
@@ -35,6 +35,8 @@
 '''Biella''' éte 'nu comune [[Italie|tagliáne]] de 45.822 al 31/12/06 crestiáne.
 
 [[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Biella]]
+{{Provinge de Biella}}
 
 [[ar:بييلا]]
 [[ca:Biella]]
