*Empty MediaWiki Message*

--- a/Camburzano.mw
+++ b/Camburzano.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Camburzano''' éte 'nu comune [[Italie|tagliáne]] de 1.184 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Biella]]
+{{Provinge de Biella}}
