*Empty MediaWiki Message*

--- a/Occhieppo_Inferiore.mw
+++ b/Occhieppo_Inferiore.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Occhieppo Inferiore''' éte 'nu comune [[Italie|tagliáne]] de 3.946 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Biella]]
+{{Provinge de Biella}}
