*Empty MediaWiki Message*

--- a/Piatto_(BI).mw
+++ b/Piatto_(BI).mw
@@ -1,3 +1,6 @@
 {{S}}
-'''Piatto (BI)''' éte 'nu comune [[Italie|tagliáne]] de 552 crestiáne.
-[[Category:Gëografije]]
+'''Piatto''' éte 'nu comune [[Italie|tagliáne]] de 552 crestiáne.
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Biella]]
+{{Provinge de Biella}}
