*Empty MediaWiki Message*

--- a/Pollone_(BI).mw
+++ b/Pollone_(BI).mw
@@ -1,3 +1,6 @@
 {{S}}
-'''Pollone (BI)''' éte 'nu comune [[Italie|tagliáne]] de 2.219 crestiáne.
-[[Category:Gëografije]]
+'''Pollone''' éte 'nu comune [[Italie|tagliáne]] de 2.219 crestiáne.
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Biella]]
+{{Provinge de Biella}}
