*Empty MediaWiki Message*

--- a/Pralungo.mw
+++ b/Pralungo.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Pralungo''' éte 'nu comune [[Italie|tagliáne]] de 2.781 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Biella]]
+{{Provinge de Biella}}
