*Empty MediaWiki Message*

--- a/Sostegno_(BI).mw
+++ b/Sostegno_(BI).mw
@@ -1,3 +1,6 @@
 {{S}}
-'''Sostegno (BI)''' éte 'nu comune [[Italie|tagliáne]] de 784 crestiáne.
-[[Category:Gëografije]]
+'''Sostegno''' éte 'nu comune [[Italie|tagliáne]] de 784 crestiáne.
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Biella]]
+{{Provinge de Biella}}
