*Empty MediaWiki Message*

--- a/Verbania.mw
+++ b/Verbania.mw
@@ -34,6 +34,8 @@
 '''Verbania''' ète nu comune de 30.880 cristiane.
 
 [[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Verbania]]
+{{Provinge de Verbania}}
 
 [[ar:فربانيا]]
 [[ca:Verbania]]
