*Empty MediaWiki Message*

--- a/Verbania.mw
+++ b/Verbania.mw
@@ -34,8 +34,8 @@
 '''Verbania''' ète nu comune de 30.880 cristiane.
 
 [[Category:Comune d'u Piemonte]]
-[[Category:Comune d'a provinge de Verbania]]
-{{Provinge de Verbania}}
+[[Category:Comune d'a provinge d'u Verbano-Cusio-Ossola]]
+{{Provinge de Verbano-Cusio-Ossola}}
 
 [[ar:فربانيا]]
 [[ca:Verbania]]
