*Empty MediaWiki Message*

--- a/Verbania.mw
+++ b/Verbania.mw
@@ -35,7 +35,7 @@
 
 [[Category:Comune d'u Piemonte]]
 [[Category:Comune d'a provinge d'u Verbano-Cusio-Ossola]]
-{{Provinge de Verbano-Cusio-Ossola}}
+{{Provinge d'u Verbano-Cusio-Ossola}}
 
 [[ar:فربانيا]]
 [[ca:Verbania]]
