*Empty MediaWiki Message*

--- a/Bannio_Anzino.mw
+++ b/Bannio_Anzino.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Bannio Anzino''' éte 'nu comune [[Italie|tagliáne]] de 584 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge d'u Verbano-Cusio-Ossola]]
+{{Provinge d'u Verbano-Cusio-Ossola}}
