*Empty MediaWiki Message*

--- a/Bee.mw
+++ b/Bee.mw
@@ -32,6 +32,8 @@
 '''Bee''' éte 'nu comune [[Italie|tagliáne]] de 623 crestiáne.
 
 [[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge d'u Verbano-Cusio-Ossola]]
+{{Provinge d'u Verbano-Cusio-Ossola}}
 
 [[de:Bee]]
 [[en:Bee (VB)]]
