*Empty MediaWiki Message*

--- a/Mergozzo.mw
+++ b/Mergozzo.mw
@@ -1,6 +1,9 @@
 {{S}}
 '''Mergozzo''' éte 'nu comune [[Italie|tagliáne]] de 2.038 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge d'u Verbano-Cusio-Ossola]]
+{{Provinge d'u Verbano-Cusio-Ossola}}
 
 [[de:Mergozzo]]
 [[en:Mergozzo]]
