*Empty MediaWiki Message*

--- a/Miazzina.mw
+++ b/Miazzina.mw
@@ -1,6 +1,9 @@
 {{S}}
 '''Miazzina''' éte 'nu comune [[Italie|tagliáne]] de 390 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge d'u Verbano-Cusio-Ossola]]
+{{Provinge d'u Verbano-Cusio-Ossola}}
 
 [[de:Miazzina]]
 [[en:Miazzina]]
