*Empty MediaWiki Message*

--- a/Ornavasso.mw
+++ b/Ornavasso.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Ornavasso''' éte 'nu comune [[Italie|tagliáne]] de 3.266 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge d'u Verbano-Cusio-Ossola]]
+{{Provinge d'u Verbano-Cusio-Ossola}}
